common/test/keyboards/invalid/source/CERR_404B_k_025___options_with_reset.kmn
store(&NAME) '025 - options with reset'
c Description: Tests basic option rules with reset
c keys: [K_A][K_1][K_A][K_0][K_A][K_3]
c expected: foo.foo.no foo.
c context: 
c option: foo=1
c expected option: foo=1

store(&version) '10.0'

store(foo) '0'

begin Unicode > use(Main)

group(Main) using keys

if(foo = '1') + 'a' > 'foo.'
if(foo = '0') + 'a' > 'no foo.'

c ***** CERR_InvalidReset 0x0000404B ********************************
+ '1' > set(
+ '0' > set
c *******************************************************************

+ '3' > reset(foo)
